# cpp_profiling

./: .gitignore
clang_profiling/clang_profiling_cmake/: CMakeLists.txt  README.md  run_cmake.sh
clang_profiling/clang_profiling_cmake/example/: main.cpp
clang_profiling/clang_profiling_cmake/include/: test_gprof.h  test_gprof_new.h
clang_profiling/clang_profiling_cmake/src/: test_gprof.cpp  test_gprof_new.cpp
clang_profiling/clang_profiling_terminal/: code  code_coverage  do_coverage.sh  do_profiling.sh  test_gprof.cpp  test_gprof_new.cpp
gprof/: analysis.txt  gprof_readme.md  test_gprof  test_gprof.c
